# Gopp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/gopp/: Channel.h  Constants.h  Context.h  Coroutine.h  Devices.h  Processor.h  Scheduler.h  Task.h
src/: Context.cpp  Coroutine.cpp  Processor.cpp  Scheduler.cpp  Task.cpp
tests/: test_context.cpp  test_coroutine.cpp  test_scheduler.cpp  test_task.cpp
